# chatbond

./: README.md
be-api/: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Earthfile  Makefile.docker.mk  README.md  docker-compose-common.yml  docker-compose-prod.swarm.extra.yml  docker-compose.swarm.local.yml  makefile  manage.py  mkdocs.yml  nginx.conf  pyproject.toml  setup.cfg  wait_for_dependencies.py
be-api/.github/workflows/: ci.yml
be-api/chatbond/: dramatiq_setup.py  urls.py  wsgi.py
be-api/chatbond/chats/: admin.py  custom_queryset.py  models.py  permissions.py  serializers.py  usecase.py  views.py
be-api/chatbond/chats/migrations/: 0001_initial.py  0002_alter_questionchat_status.py  0003_historicalquestionchat.py  0004_auto_20230707_1445.py  0005_questionthread_all_interlocutors_answered.py
be-api/chatbond/chats/tests/: test_custom_queryset.py  test_integration.py  test_permissions.py  test_usecases.py  test_views.py
be-api/chatbond/common/: models.py
be-api/chatbond/config/: __init__.py  common.py  local.py  production.py  testing.py
be-api/chatbond/infra/: admin.py  email.py  files.py  models.py  serializers.py  signal_handlers.py  tasks.py  views.py
be-api/chatbond/infra/migrations/: 0001_initial.py
be-api/chatbond/invitations/: admin.py  models.py  serializers.py  test_views.py  views.py
be-api/chatbond/invitations/migrations/: 0001_initial.py  0002_alter_invitation_unique_together.py
be-api/chatbond/questions/: admin.py  custom_queryset.py  draft_serializer.py  models.py  permissions.py  serializers.py  tasks.py  views.py
be-api/chatbond/questions/data/: add_unique_ids.py  questions.csv
be-api/chatbond/questions/migrations/: 0001_initial.py  0002_questionlikedevent_interlocutor.py  0003_auto_20230512_0315.py  0004_auto_20230512_1951.py  0005_add_pgvector_extension.py  0006_auto_20230521_1720.py  0007_questionfeed.py  0008_auto_20230618_1035.py  0009_auto_20230628_2041.py  0010_auto_20230905_1805.py  0011_auto_20230906_1904.py  0012_auto_20231004_1320.py  0013_searchedstrings.py
be-api/chatbond/questions/tests/: test_custom_querysets.py  test_models.py  test_views.py
be-api/chatbond/realtime/: dataclass.py  service.py
be-api/chatbond/realtime/tests/: test_service.py
be-api/chatbond/recommender/: README.md  constants.py  tasks.py
be-api/chatbond/recommender/services/: question_recommender.py
be-api/chatbond/users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  views.py
be-api/chatbond/users/migrations/: 0001_initial.py  0002_historicaluser.py  0003_auto_20231001_2314.py
be-api/docs/: index.md
(+200 files in other folders)
